--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,8 +8,7 @@
 <body>
   <header>
     <h1>Privacy Policy – Revernote</h1>
-    <p><strong>Effective Date:</strong> 28 July 2025</p>
-    <p><strong>Developer:</strong> Richard Novas</p>
+    <p><strong>Effective Date:</strong> 29 July 2025</p>
     <p><strong>Contact Email:</strong> hausofnovas@gmail.com</p>
     <p><strong>Jurisdiction:</strong> Global (GDPR, CCPA, Google Play Compliant)</p>
   </header>
@@ -34,7 +33,7 @@
       <h2>3. Information We Collect</h2>
 
       <h3>3.1 Account Information</h3>
-      <p>When you sign up for Revernote using Google or email/password via Firebase Authentication, we collect and store the following:</p>
+      <p>When you sign up for Revernote using email/password via Firebase Authentication, we collect and store the following:</p>
       <ul>
         <li>First Name &amp; Last Name</li>
         <li>Email Address</li>
@@ -167,9 +166,7 @@
     <section>
       <h2>14. Contact Us</h2>
       <p>If you have any questions about this Privacy Policy or your data rights, please contact:</p>
-      <p><strong>Richard Novas</strong><br>
       Email: <a href="mailto:hausofnovas@gmail.com">hausofnovas@gmail.com</a><br>
-      India</p>
     </section>
   </main>
 </body>
