--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -1,106 +1,127 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Terms and Conditions – Revernote</title>
 </head>
 <body>
-<pre>
-TERMS AND CONDITIONS – Revernote
-Effective Date: 29 July 2025
-Developer: Richard Novas
-Contact: hausofnovas@gmail.com
-Jurisdiction: Global
-App Platform: Android (Google Play)
+  <header>
+    <h1>TERMS AND CONDITIONS – Revernote</h1>
+    <p><strong>Effective Date:</strong> 29 July 2025</p>
+    <p><strong>Contact:</strong> hausofnovas@gmail.com</p>
+    <p><strong>Jurisdiction:</strong> Global </p>
 
-1. Introduction
-Welcome to Revernote ("App", "we", "our", "us"), a private voice journaling application developed by Richard Novas. These Terms and Conditions ("Terms") govern your access to and use of the App. By downloading, installing, accessing, or using the App, you agree to be bound by these Terms. If you do not agree to these Terms, do not use the App.
+  </header>
 
-2. Definitions
-“App” refers to Revernote, including all features and functionality.
+  <main>
+    <section>
+      <h2>1. Introduction</h2>
+      <p>Welcome to Revernote ("App", "we", "our", "us"), a private voice journaling application developed by Richard Novas. These Terms and Conditions ("Terms") govern your access to and use of the App. By downloading, installing, accessing, or using the App, you agree to be bound by these Terms. If you do not agree to these Terms, do not use the App.</p>
+    </section>
 
-“User”, “you” refers to the individual accessing or using the App.
+    <section>
+      <h2>2. Definitions</h2>
+      <ul>
+        <li><strong>“App”</strong> refers to Revernote, including all features and functionality.</li>
+        <li><strong>“User”, “you”</strong> refers to the individual accessing or using the App.</li>
+        <li><strong>“Content”</strong> means all audio, text, or media you create using the App.</li>
+        <li><strong>“Account”</strong> refers to your registered user profile created via Firebase Authentication.</li>
+      </ul>
+    </section>
 
-“Content” means all audio, text, or media you create using the App.
+    <section>
+      <h2>3. Eligibility</h2>
+      <p>You must be at least 13 years old to use the App. By using the App, you affirm that you are eligible and that all information you provide is accurate and complete. If you are under the age of 18, you represent that you have the consent of a parent or legal guardian to use the App.</p>
+    </section>
 
-“Account” refers to your registered user profile created via Firebase Authentication.
+    <section>
+      <h2>4. Account and Access</h2>
 
-3. Eligibility
-You must be at least 13 years old to use the App. By using the App, you affirm that you are eligible and that all information you provide is accurate and complete. If you are under the age of 18, you represent that you have the consent of a parent or legal guardian to use the App.
+      <h3>4.1 Registration</h3>
+      <p>To use the App, you must register an account using email/password authentication. You agree to provide true, accurate, and complete information during registration.</p>
 
-4. Account and Access
-4.1 Registration
-To use the App, you must register an account using email/password authentication. You agree to provide true, accurate, and complete information during registration.
+      <h3>4.2 Responsibility</h3>
+      <p>You are responsible for safeguarding your login credentials. Any activity conducted through your account is your responsibility.</p>
 
-4.2 Responsibility
-You are responsible for safeguarding your login credentials. Any activity conducted through your account is your responsibility.
+      <h3>4.3 Termination by You</h3>
+      <p>You may delete your account at any time by contacting us at hausofnovas@gmail.com.</p>
 
-4.3 Termination by You
-You may delete your account at any time by contacting us at hausofnovas@gmail.com.
+      <h3>4.4 Termination by Us</h3>
+      <p>We reserve the right to suspend or terminate your access to the App for violations of these Terms or applicable laws.</p>
+    </section>
 
-4.4 Termination by Us
-We reserve the right to suspend or terminate your access to the App for violations of these Terms or applicable laws.
+    <section>
+      <h2>5. Acceptable Use</h2>
+      <p>You agree to use the App only for lawful purposes and in accordance with these Terms. You shall not:</p>
+      <ul>
+        <li>Record individuals without their explicit knowledge and consent (as required by applicable laws).</li>
+        <li>Use the App to harass, threaten, defame, or otherwise violate the rights of others.</li>
+        <li>Engage in reverse engineering, scraping, or unauthorised access to the App’s code or content.</li>
+        <li>Copy, distribute, or sublicense the App or any portion of it without permission.</li>
+      </ul>
+    </section>
 
-5. Acceptable Use
-You agree to use the App only for lawful purposes and in accordance with these Terms. You shall not:
+    <section>
+      <h2>6. Intellectual Property</h2>
+      <p>All intellectual property rights in the App, including software, design, text, graphics, and logos, are owned by or licensed to Richard Novas. All rights are reserved. You may not use the App’s name, branding, or assets without express written permission.</p>
+      <p>User-generated content (e.g., your recorded journal entries) remains your property. Revernote does not claim ownership of your personal content.</p>
+    </section>
 
-Record individuals without their explicit knowledge and consent (as required by applicable laws).
+    <section>
+      <h2>7. Privacy and Data Usage</h2>
+      <p>Your use of the App is also governed by our Privacy Policy, which explains how we collect, store, and protect your data. By using the App, you consent to our collection and use of personal data as outlined in the Privacy Policy.</p>
+    </section>
 
-Use the App to harass, threaten, defame, or otherwise violate the rights of others.
+    <section>
+      <h2>8. App Permissions</h2>
+      <p>The App uses certain Android permissions, including:</p>
+      <ul>
+        <li><strong>RECORD_AUDIO:</strong> To enable voice journaling features.</li>
+        <li><strong>FOREGROUND_SERVICE:</strong> To ensure uninterrupted audio recording or playback.</li>
+        <li><strong>RECEIVE_BOOT_COMPLETED:</strong> To restart reminders after a device reboot.</li>
+        <li><strong>VIBRATE:</strong> For non-intrusive notification feedback.</li>
+        <li><strong>SCHEDULE_EXACT_ALARM:</strong> To support precise reminders.</li>
+        <li><strong>USE_FULL_SCREEN_INTENT:</strong> To show important prompts for journaling.</li>
+      </ul>
+      <p>These permissions are required solely for providing app functionality and are not misused.</p>
+    </section>
 
-Engage in reverse engineering, scraping, or unauthorized access to the App’s code or content.
+    <section>
+      <h2>9. Modifications</h2>
+      <p>We reserve the right to modify these Terms at any time. Changes will be effective upon posting or notification. Continued use of the App after updates means you accept the new Terms.</p>
+    </section>
 
-Copy, distribute, or sublicense the App or any portion of it without permission.
+    <section>
+      <h2>10. Disclaimers</h2>
+      <p>The App is provided “as is” and “as available.” We make no warranties regarding reliability, availability, or performance. We do not guarantee that the App will be error-free or uninterrupted.</p>
+    </section>
 
-6. Intellectual Property
-All intellectual property rights in the App, including software, design, text, graphics, and logos, are owned by or licensed to Richard Novas. All rights are reserved. You may not use the App’s name, branding, or assets without express written permission.
+    <section>
+      <h2>11. Limitation of Liability</h2>
+      <p>To the fullest extent permitted by law, we shall not be liable for any indirect, incidental, special, consequential, or punitive damages, including loss of data, loss of profits, or interruption of service, even if advised of the possibility of such damages.</p>
+    </section>
 
-User-generated content (e.g., your recorded journal entries) remains your property. Revernote does not claim ownership of your personal content.
+    <section>
+      <h2>12. Indemnification</h2>
+      <p>You agree to indemnify and hold harmless Richard Novas, affiliates, and service providers from any claims, damages, liabilities, or expenses arising out of your use of the App, violation of these Terms, or infringement of any rights of a third party.</p>
+    </section>
 
-7. Privacy and Data Usage
-Your use of the App is also governed by our Privacy Policy, which explains how we collect, store, and protect your data. By using the App, you consent to our collection and use of personal data as outlined in the Privacy Policy.
+    <section>
+      <h2>13. Governing Law</h2>
+      <p>These Terms shall be governed by and construed in accordance with the laws of India, without regard to its conflict of law principles. If you are accessing the App from outside India, you are responsible for compliance with local laws.</p>
+    </section>
 
-8. App Permissions
-The App uses certain Android permissions, including:
+    <section>
+      <h2>14. Dispute Resolution</h2>
+      <p>Any disputes arising out of or related to these Terms shall be subject to the exclusive jurisdiction of the courts in [your city/state, e.g., Bangalore, India], unless otherwise required by applicable data protection laws.</p>
+    </section>
 
-RECORD_AUDIO: To enable voice journaling features.
-
-FOREGROUND_SERVICE: To ensure uninterrupted audio recording or playback.
-
-RECEIVE_BOOT_COMPLETED: To restart reminders after a device reboot.
-
-VIBRATE: For non-intrusive notification feedback.
-
-SCHEDULE_EXACT_ALARM: To support precise reminders.
-
-USE_FULL_SCREEN_INTENT: To show important prompts for journaling.
-
-These permissions are required solely for providing app functionality and are not misused.
-
-9. Modifications
-We reserve the right to modify these Terms at any time. Changes will be effective upon posting or notification. Continued use of the App after updates means you accept the new Terms.
-
-10. Disclaimers
-The App is provided “as is” and “as available.” We make no warranties regarding reliability, availability, or performance. We do not guarantee that the App will be error-free or uninterrupted.
-
-11. Limitation of Liability
-To the fullest extent permitted by law, we shall not be liable for any indirect, incidental, special, consequential, or punitive damages, including loss of data, loss of profits, or interruption of service, even if advised of the possibility of such damages.
-
-12. Indemnification
-You agree to indemnify and hold harmless Richard Novas, affiliates, and service providers from any claims, damages, liabilities, or expenses arising out of your use of the App, violation of these Terms, or infringement of any rights of a third party.
-
-13. Governing Law
-These Terms shall be governed by and construed in accordance with the laws of India, without regard to its conflict of law principles. If you are accessing the App from outside India, you are responsible for compliance with local laws.
-
-14. Dispute Resolution
-Any disputes arising out of or related to these Terms shall be subject to the exclusive jurisdiction of the courts in [your city/state, e.g., Bangalore, India], unless otherwise required by applicable data protection laws.
-
-15. Contact Information
-If you have any questions or concerns regarding these Terms, please contact:
-
-Richard Novas
-Email: hausofnovas@gmail.com
-India
-</pre>
+    <section>
+      <h2>15. Contact Information</h2>
+      <p>If you have any questions or concerns regarding these Terms, please contact:</p>
+      Email: <a href="mailto:hausofnovas@gmail.com">hausofnovas@gmail.com</a><br>
+    </section>
+  </main>
 </body>
 </html>
