--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -9,7 +9,7 @@
   <header>
     <h1>Privacy Policy – Revernote</h1>
     <p><strong>Effective Date:</strong> 29 July 2025</p>
-    <p><strong>Contact Email:</strong> hausofnovas@gmail.com</p>
+    <p><strong>Contact Email:</strong> revernote.help@gmail.com</p>
   </header>
 
   <main>
@@ -126,7 +126,7 @@
           <tr><td>Object</td><td>Object to data processing for specific reasons</td></tr>
         </tbody>
       </table>
-      <p>To exercise these rights, contact us at hausofnovas@gmail.com</p>
+      <p>To exercise these rights, contact us at revernote.help@gmail.com</p>
     </section>
 
     <section>
@@ -165,7 +165,7 @@
     <section>
       <h2>14. Contact Us</h2>
       <p>If you have any questions about this Privacy Policy or your data rights, please contact:</p>
-      Email: <a href="mailto:hausofnovas@gmail.com">hausofnovas@gmail.com</a><br>
+      Email: <a href="mailto:revernote.help@gmail.com">revernote.help@gmail.com</a><br>
     </section>
   </main>
 </body>
