--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -9,7 +9,7 @@
   <header>
     <h1>TERMS AND CONDITIONS – Revernote</h1>
     <p><strong>Effective Date:</strong> 29 July 2025</p>
-    <p><strong>Contact:</strong> hausofnovas@gmail.com</p>
+    <p><strong>Contact:</strong> revernote.help@gmail.com</p>
 
   </header>
 
@@ -44,7 +44,7 @@
       <p>You are responsible for safeguarding your login credentials. Any activity conducted through your account is your responsibility.</p>
 
       <h3>4.3 Termination by You</h3>
-      <p>You may delete your account at any time by contacting us at hausofnovas@gmail.com.</p>
+      <p>You may delete your account at any time by contacting us at revernote.help@gmail.com.</p>
 
       <h3>4.4 Termination by Us</h3>
       <p>We reserve the right to suspend or terminate your access to the App for violations of these Terms or applicable laws.</p>
@@ -119,7 +119,7 @@
     <section>
       <h2>15. Contact Information</h2>
       <p>If you have any questions or concerns regarding these Terms, please contact:</p>
-      Email: <a href="mailto:hausofnovas@gmail.com">hausofnovas@gmail.com</a><br>
+      Email: <a href="mailto:revernote.help@gmail.com">revernote.help@gmail.com</a><br>
     </section>
   </main>
 </body>
