Updated Country info in privacy-policy.html

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -54,6 +54,15 @@
         <li>Crash data</li>
       </ul>
       <p>This information helps us improve app performance and user experience.</p>
+
+      <h3>3.4 Country or Region Information</h3>
+      <p>During signup, we may ask you to provide your country or region. This information is collected to:</p>
+      <ul>
+        <li>Customise your experience (e.g., language or time zone adjustments)</li>
+        <li>Ensure compliance with regional laws and regulations</li>
+        <li>Improve our understanding of our user base in a general sense</li>
+      </ul>
+      <p>We do not collect precise GPS location data. Country or region information is stored securely and is not shared with third parties for advertising purposes.</p>
     </section>
 
     <section>
